--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "egghead tut",
   "main": "index.js",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "webpack-dev-server --progress --colors --content-base public/"
+    "start": "webpack-dev-server --progress --colors --content-base public/",
+    "build": "webpack --progress --colors"
   },
   "author": "Ariel",
   "license": "ISC",
